--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: var(--component-white-color);
 }
 .canva-navbar .logo-container {
   display: flex;
