--- a/src/Pages/LoginPage/LoginPage.css
+++ b/src/Pages/LoginPage/LoginPage.css
@@ -59,7 +59,8 @@
 }
 
 .style-input-checkbox {
-  margin-left: -12rem;
+  margin-top: 0rem;
+  /* margin-left: 2px; */
 }
 
 .button-link {
@@ -77,7 +78,10 @@
   margin: 0rem 2rem 1rem 0rem;
 }
 
-.forgot-pswrd-link a {
-  margin-left: 12rem;
+.forgot-pswrd-link {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-right: 1.5rem;
   color: var(--component-black-color);
 }
