Added VideoPage/Category Listing

--- a/src/Pages/Explore/Explore.css
+++ b/src/Pages/Explore/Explore.css
@@ -21,4 +21,10 @@
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
+  flex-direction: column;
+}
+.filtered-videos {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
