--- a/src/Pages/Explore/Explore.css
+++ b/src/Pages/Explore/Explore.css
@@ -21,10 +21,14 @@
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
-  flex-direction: column;
 }
 .filtered-videos {
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
+  margin-top: 0rem;
+}
+.category-container {
+  margin-bottom: 0rem;
+  height: 10px;
 }
