--- a/src/Components/VideoCard/VideoCard.css
+++ b/src/Components/VideoCard/VideoCard.css
@@ -1,10 +1,12 @@
 .videocard-styling {
   width: 18rem;
   margin-bottom: 1.25rem;
+  position: relative;
 }
 .videocard-thumbnail {
   height: 10rem;
   width: 18rem;
+  position: relative;
 }
 .videocard-info {
   display: flex;
