--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -34,6 +34,7 @@
   width: 40%;
   border: 1px solid var(--component-black-color);
   align-items: center;
+  margin-left: 20rem;
 }
 .navbar-input > input {
   flex: 1;
@@ -45,15 +46,20 @@
 }
 .navbar-links {
   display: flex;
-}
-.navbar-login-link {
-  margin-right: 0.8rem;
-  margin-left: 0;
+  margin-left: auto;
   text-decoration: none;
-  color: var(--component-black-color);
 }
-.navbar-signup-link {
-  margin-right: 0.8rem;
+a {
   text-decoration: none;
-  color: var(--component-black-color);
+}
+
+.nav-action-buttons {
+  display: flex;
+  gap: 2rem;
+  margin-right: 1rem;
+  text-decoration: none;
+}
+
+.logout-btn {
+  margin-right: 2rem;
 }
