--- a/src/Components/VideoCard/VideoCard.css
+++ b/src/Components/VideoCard/VideoCard.css
@@ -51,6 +51,7 @@
   width: 12rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
   opacity: 0;
+  z-index: 99;
 }
 .dropdown-menu.active {
   opacity: 1;
